MODELER-420 : replaced css border with outline to avoid widget shifting on selection

--- a/workspace/wilbal/Designer_ProInstaller_1_0_14_MODELER-420/war/resources/css/main.css
+++ b/workspace/wilbal/Designer_ProInstaller_1_0_14_MODELER-420/war/resources/css/main.css
@@ -18,7 +18,7 @@
    background-color: yellow;
 }
 .button-border {
-   border: 1px solid orange;
+   outline: 1px solid orange;
    opacity:0.9;
 }
 
